--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "define": "aleclarson/define#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "failure": "aleclarson/failure#1.0.0",
-    "io": "aleclarson/io#1.0.0",
+    "isDev": "aleclarson/isDev#1.0.0",
     "lotus-log": "aleclarson/lotus-log#1.0.0",
     "lotus-require": "aleclarson/lotus-require#1.0.0",
     "named-function": "aleclarson/named-function#1.0.3",
     "reaction": "aleclarson/reaction#0.0.1",
     "steal": "aleclarson/steal#0.0.1",
+    "sync": "aleclarson/sync#1.0.0",
     "type-utils": "aleclarson/type-utils#1.0.0"
   },
   "repository": {
