--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "factory",
-  "description": "Instance factories for Javascript",
   "version": "1.0.0",
-  "main": "./js/src/Factory",
+  "main": "js/src/Factory",
   "dependencies": {
     "combine": "aleclarson/combine#1.0.0",
     "define": "aleclarson/define#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "failure": "aleclarson/failure#1.0.0",
+    "guard": "aleclarson/guard#1.0.0",
+    "injector": "aleclarson/injector#1.0.0",
     "isDev": "aleclarson/isDev#1.0.0",
-    "lotus-log": "aleclarson/lotus-log#1.0.0",
+    "mergeDefaults": "aleclarson/mergeDefaults#1.0.0",
     "NamedFunction": "aleclarson/NamedFunction#1.0.0",
     "steal": "aleclarson/steal#0.0.1",
     "sync": "aleclarson/sync#1.0.0",
-    "type-utils": "aleclarson/type-utils#1.0.0"
+    "type-utils": "aleclarson/type-utils#1.0.0",
+    "ValueDefiner": "aleclarson/ValueDefiner#1.0.0"
+  },
+  "lotus": {
+    "plugins": [
+      "lotus-coffee"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,10 +28,5 @@
   },
   "licenses": [
     "MIT"
-  ],
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
-  }
+  ]
 }
