--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "js/src/Factory",
   "dependencies": {
+    "NamedFunction": "aleclarson/NamedFunction#2.0.0",
+    "ValueDefiner": "aleclarson/ValueDefiner#1.0.0",
     "combine": "aleclarson/combine#1.0.0",
     "define": "aleclarson/define#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
@@ -11,11 +13,9 @@
     "injector": "aleclarson/injector#1.0.0",
     "isDev": "aleclarson/isDev#1.0.0",
     "mergeDefaults": "aleclarson/mergeDefaults#1.0.0",
-    "NamedFunction": "aleclarson/NamedFunction#1.0.0",
     "steal": "aleclarson/steal#0.0.1",
     "sync": "aleclarson/sync#1.0.0",
-    "type-utils": "aleclarson/type-utils#1.0.0",
-    "ValueDefiner": "aleclarson/ValueDefiner#1.0.0"
+    "type-utils": "aleclarson/type-utils#1.0.0"
   },
   "lotus": {
     "plugins": [
